<resources>
    <string name="app_name">FLink</string>
    <string name="title_home">Home</string>
    <string name="title_finances">Finanzen</string>
    <string name="title_cooking">Kochen</string>
    <string name="title_shopping">Einkaufen</string>
    <string name="title_lists">Listen</string>
    <string name="finances_overview">Übersicht</string>
    <string name="finances_categories">Kategorien</string>
    <string name="finances_statistics">Statistiken</string>
    <string name="finances_abos"><![CDATA[Abos & Verträge]]></string>
    <string name="finances_all_entries">Alle Einträge</string>
    <string name="finances_export">Exportieren</string>
    <string name="filter_finances">Filter Finances</string>
    <string name="finances_add_entry">Finanzeintrag erstellen</string>
    <string name="finances_new_entry">Neuer Finanzeintrag</string>
    <string name="description">Beschreibung</string>
    <string name="currency">EUR</string>
    <string name="finances_new_entry_from">Von</string>
    <string name="finances_new_entry_for">Für</string>
    <string name="denise">Denise</string>
    <string name="denise_colon">Denise:</string>
    <string name="sascha">Sascha</string>
    <string name="sascha_colon">Sascha:</string>
    <string name="category">Kategorie</string>
    <string name="category_colon">Kategorie:</string>
    <string name="save">Speichern</string>
    <string name="deduction">Ausgabe</string>
    <string name="addition">Einnahme</string>
    <string name="date">Datum</string>
    <string name="date_colon">Datum:</string>
    <string name="dummyDate">17.07.1992</string>
    <string name="modfiyFinanceEntry">Finanzeintrag</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="ok">Ok</string>
    <string name="delete_u_sure">Möchtest du den Eintrag wirklich löschen?</string>
    <string name="remove_entry">Eintrag löschen</string>
    <string name="cash_up">Kassensturz</string>
    <string name="delete">Löschen</string>
    <string name="not_available">…</string>
    <string name="groceries">Einkaufen</string>
    <string name="shopping">Shoppen</string>
    <string name="monthly_costs">Fixkosten</string>
    <string name="loan">Kredit</string>
    <string name="insurance">Versicherung</string>
    <string name="spare_time">Freizeit</string>
    <string name="pets">Tierbedarf</string>
    <string name="eat">Essen</string>
    <string name="car">Auto</string>
    <string name="save_money">Sparen</string>
    <string name="health">Gesundheit</string>
    <string name="living">Wohnung/Garten</string>
    <string name="other">Sonstiges</string>
    <string name="handy">Handy</string>
    <string name="cash_up_alert_title">Kassensturz durchführen?</string>
    <string name="cash_up_alert_message">Dadurch werden alle aktuellen Finanzeinträge zurückgesetzt und eine neue Abrechnung gestartet.</string>
    <string name="cash_up_nothing_to_do_title">Keine Daten vorhanden</string>
    <string name="cash_up_nothing_to_do">Es sind keine Daten zum Archivieren vorhanden.</string>
    <string name="cash_up_notification_title">Kassensturz erfolgreich!</string>
    <string name="cash_up_notification_done">Der Kassensturz wurde erfolgreich durchgeführt.</string>
    <string name="cash_up_error_title">Kassensturz fehlgeschlagen!</string>
    <string name="cash_up_error_message">"Fehler beim Archivieren von Monat: "</string>
</resources>