<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_finances"
        android:icon="@drawable/ic_finances_black_24dp"
        android:title="@string/title_finances" />

    <item
        android:id="@+id/navigation_cooking"
        android:icon="@drawable/ic_cooking_black_24dp"
        android:title="@string/title_cooking" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shopping_black_24dp"
        android:title="@string/title_shopping" />

    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/ic_lists_black_24dp"
        android:title="@string/title_lists" />

</menu>