<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.FLink.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_finances"
        android:name="com.example.FLink.ui.finances.FinancesFragment"
        android:label="@string/title_finances"
        tools:layout="@layout/fragment_finances" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.FLink.ui.cooking.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping"/>

    <fragment
        android:id="@+id/navigation_cooking"
        android:name="com.example.FLink.ui.cooking.CookingFragment"
        android:label="@string/title_cooking"
        tools:layout="@layout/fragment_cooking" />

    <fragment
        android:id="@+id/navigation_lists"
        android:name="com.example.FLink.ui.cooking.ListsFragment"
        android:label="@string/title_lists"
        tools:layout="@layout/fragment_lists" />
</navigation>