<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.finances.financesOverviewFragment">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/finances_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/finances_overview_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/finances_all_entries"
            android:textColor="@color/green_prime"
            android:gravity="center"
            android:layout_weight="4"
            android:autoSizeTextType="uniform"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finances_export"
            android:drawableLeft="@drawable/ic_baseline_download_for_offline_24"
            android:gravity="center"
            android:textSize="8dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/grey_prime"
            android:drawableTint="@color/white"
            android:textColor="@color/white"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_filter_alt_24"
            android:background="@null"
            app:tint="@color/grey_text"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/filter_finances"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/finances_overview_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/finances_bottom"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_finances_equalize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Kassensturz"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey_text"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="2dp"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/frame"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/text_finances_debtor"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/text_finances_debts"
                            android:text="Sascha:"
                            android:textColor="@color/grey_text"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="4dp"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:id="@+id/text_finances_debts"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toRightOf="@id/text_finances_debtor"
                            app:layout_constraintRight_toRightOf="parent"
                            android:text="312,00 €"
                            android:textColor="@color/red_minus"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:layout_marginRight="8dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginBottom="4dp"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_finances_add"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="Finanzeintrag erstellen"
            android:textColor="@color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/finances_overview_headline"
        app:layout_constraintBottom_toTopOf="@id/finances_overview_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:itemCount="7"
        tools:listitem="@layout/finances_entry_design">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>